@@ -2,7 +2,7 @@
 //
 // Title:       Force Field X.
 // Description: Force Field X - Software for Molecular Biophysics.
-// Copyright:   Copyright (c) Michael J. Schnieders 2001-2025.
+// Copyright:   Copyright (c) Michael J. Schnieders 2001-2026.
 //
 // This file is part of Force Field X.
 //
@@ -124,6 +124,10 @@ public class ManyBody extends AlgorithmsCommand {
       return this;
     }
 
+    // Atomic clashes are expected and will be handled using direct induced dipoles.
+    System.setProperty("sor-scf-fallback", "false");
+    System.setProperty("direct-scf-fallback", "true");
+
     // This flag is for ForceFieldEnergyOpenMM and must be set before reading files.
     // It enforces that all torsions include a Fourier series with 6 terms.
     // Otherwise, during titration the number of terms for each torsion may change and
@@ -167,11 +171,10 @@ public class ManyBody extends AlgorithmsCommand {
       }
 
       // Create new MolecularAssembly with additional protons and update the ForceFieldEnergy
-      titrationManyBody = new TitrationManyBody(filenames.get(0), activeAssembly.getForceField(),
+      titrationManyBody = new TitrationManyBody(filenames.getFirst(), activeAssembly.getForceField(),
           resNumberList, titrationPH, manyBodyOptions);
-      MolecularAssembly protonatedAssembly = titrationManyBody.getProtonatedAssembly();
-      setActiveAssembly(protonatedAssembly);
-      potentialEnergy = protonatedAssembly.getPotentialEnergy();
+      activeAssembly = titrationManyBody.getProtonatedAssembly();
+      potentialEnergy = activeAssembly.getPotentialEnergy();
       molecularAssemblies = new MolecularAssembly[]{activeAssembly};
     }
 
